objects/Primary_CSC_Queue_Ids__c.object
<CustomObject>
    <fields>
        <fullName>Cooling_Commercial__c</fullName>
        <label>Cooling Commercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cooling_Technical__c</fullName>
        <label>Cooling Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drives_Commercial__c</fullName>
        <label>Drives Commercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drives_Technical__c</fullName>
        <label>Drives Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heating_Commercial__c</fullName>
        <label>Heating Commercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heating_Technical__c</fullName>
        <label>Heating Technical</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>